--- a/hello.ipynb
+++ b/hello.ipynb
@@ -719,8 +719,427 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "extra-vaccine",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Some error occured\n",
+      "Returning back from function.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_expenditure(list_of_expenditure):\n",
+    "    total=0\n",
+    "    try:\n",
+    "        for expenditure in list_of_expenditure:\n",
+    "            total+=expenditure\n",
+    "        print(total)\n",
+    "    except:\n",
+    "        print(\"Some error occured\")\n",
+    "    print(\"Returning back from function.\")\n",
+    "list_of_values=[100,200,300,\"400\",500]\n",
+    "calculate_expenditure(list_of_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "otherwise-meditation",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrong data type\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_expenditure(list_of_expenditure):\n",
+    "    total=0\n",
+    "    try:\n",
+    "        for expenditure in list_of_expenditure:\n",
+    "            total+=expenditure\n",
+    "        print(\"Total:\",total)\n",
+    "        avg=total/num_values\n",
+    "        print(\"Average:\",avg)\n",
+    "    except ZeroDivisionError:\n",
+    "        print(\"Divide by Zero error\")\n",
+    "    except TypeError:\n",
+    "        print(\"Wrong data type\")\n",
+    "    except:\n",
+    "        print(\"Some error occured\")\n",
+    "list_of_values=[100,200,300,\"400\",500]\n",
+    "num_values=0\n",
+    "calculate_expenditure(list_of_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cellular-skiing",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total: 1500\n",
+      "Name error occured\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exception handling inside a function\n",
+    "# If an exception occurs inside a function and if the exception is not caught inside it, then the exception is transferred to the function call. We have another opportunity to catch it, if we write function call inside another try and except block.\n",
+    "\n",
+    "def calculate_sum(list_of_expenditure):\n",
+    "    total=0\n",
+    "    try:\n",
+    "        for expenditure in list_of_expenditure:\n",
+    "            total+=expenditure\n",
+    "        print(\"Total:\",total)\n",
+    "        avg=total/no_values\n",
+    "        print(\"Average:\",avg)\n",
+    "    except ZeroDivisionError:\n",
+    "        print(\"Divide by Zero error\")\n",
+    "    except TypeError:\n",
+    "        print(\"Wrong data type\")\n",
+    "try:\n",
+    "    list_of_values=[100,200,300,400,500]\n",
+    "    num_values=len(list_of_values)\n",
+    "    calculate_sum(list_of_values)\n",
+    "except NameError:\n",
+    "    print(\"Name error occured\")\n",
+    "except:\n",
+    "    print(\"Some error occured\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "working-institution",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value Error Occurred\n",
+      "Take the card out of ATM\n"
+     ]
+    }
+   ],
+   "source": [
+    "# finally\n",
+    "# Sometimes in programming we need to execute some code irrespective of whether the primary program logic itself succeeds or fails to do its job. In Python we can achieve this using a finally block. A finally block of statement is an optional part of the try-except statements. A code written inside the finally block will ALWAYS be executed.\n",
+    "\n",
+    "# finally block is majorly used to close the database connections in the programs which involves database connectivity.\n",
+    "\n",
+    "balance=1000\n",
+    "amount=\"300Rs\"\n",
+    "def take_card():\n",
+    "    print(\"Take the card out of ATM\")\n",
+    "try:\n",
+    "    if balance>=int(amount):\n",
+    "        print(\"Withdraw\")\n",
+    "    else:\n",
+    "        print(\"Invalid amount\")\n",
+    "except TypeError:\n",
+    "    print(\"Type Error Occurred\")\n",
+    "except ValueError:\n",
+    "    print(\"Value Error Occurred\")\n",
+    "except:\n",
+    "    print(\"Some error Occurred\")\n",
+    "finally:\n",
+    "    take_card()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "representative-scope",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 40, 50, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1=[10,20,30,40,50]\n",
+    "list1.insert(7,25)\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "specified-bulgaria",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before function call: [10, 20, 30, 40, 50]\n",
+      "Inside function: [10, 20, 30, 40, 50, 60, 70, 80]\n",
+      "After function call: [10, 20, 30, 40, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def modify_list(arg_list):\n",
+    "    arg_list=arg_list + [60, 70, 80]\n",
+    "    print(\"Inside function:\", arg_list)\n",
+    "    \n",
+    "i_list=[10,20,30,40,50]\n",
+    "print(\"Before function call:\", i_list)\n",
+    "modify_list(i_list)\n",
+    "print(\"After function call:\", i_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "coral-gravity",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 2, 6, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list=[0]*5\n",
+    "for index in range(1,5):\n",
+    "    my_list[index]=(index-1)*index\n",
+    "                    \n",
+    "print(my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "supposed-apollo",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "thisisfirstline\n",
+      "\n",
+      "17\n",
+      "you are reading the second line\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "fhr=open(\"data.txt\",\"r\")\n",
+    "cur_pos=fhr.tell()\n",
+    "print(cur_pos)\n",
+    "data =fhr.readline()\n",
+    "print(data)\n",
+    "\n",
+    "\n",
+    "cur_pos=fhr.tell()\n",
+    "print(cur_pos)\n",
+    "data =fhr.readline()\n",
+    "print(data)\n",
+    "fhr.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "rocky-pontiac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n",
+      "closed? False\n",
+      "after closing the file closed? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "FHW=open(\"data.txt\",\"w\")\n",
+    "FHW.write(\"written some thing\")\n",
+    "print(FHW.tell())\n",
+    "print(\"closed?\",FHW.closed)\n",
+    "FHW.close()\n",
+    "print(\"after closing the file closed?\",FHW.closed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "satisfactory-prairie",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 "
+     ]
+    }
+   ],
+   "source": [
+    "set_1={1,2,3,1,2,4,5,3,4,8,9,7,10}\n",
+    "for index in range(len(set_1)):\n",
+    "    print(index,end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "alone-proceeding",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 8, 6, 4, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def value(num1):\n",
+    "    list1=[]\n",
+    "    while num1!=0:\n",
+    "        if num1%2==0:\n",
+    "            list1.append(num1)\n",
+    "        else:\n",
+    "            break\n",
+    "        num1-=2\n",
+    "    print(list1)\n",
+    "value(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "imperial-torture",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sample(value):\n",
+    "    sum1=0\n",
+    "    for i in value:\n",
+    "        if i%2!=0:\n",
+    "            sum1+=value[i]\n",
+    "        else:\n",
+    "            sum1-=i\n",
+    "    print(sum1)\n",
+    "dict1={1:2,2:4,3:6,5:8}\n",
+    "sample(dict1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "automotive-bradley",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuple1=(10)\n",
+    "print(tuple1)\n",
+    "print(type(tuple1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "afraid-recognition",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple boy cat\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_dict={'a':\"apple\",'b':\"ball\"}\n",
+    "sample_dict.update({'b':\"boy\", 'c':'cat' })\n",
+    "print(sample_dict['a'],sample_dict.get('b'),sample_dict.get('c'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "demanding-custom",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum finally\n",
+      "Invocation name error\n",
+      "Invocation finally\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_sum(a,b):\n",
+    "    try:\n",
+    "        print(a+c)\n",
+    "    except ValueError:\n",
+    "        print(\"Function name error\")\n",
+    "    finally:\n",
+    "        print(\"Sum finally\")\n",
+    "try:\n",
+    "    find_sum(12,13)\n",
+    "except NameError:\n",
+    "    print(\"Invocation name error\")\n",
+    "finally:\n",
+    "    print(\"Invocation finally\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "pregnant-smoke",
    "metadata": {},
    "outputs": [],
    "source": []
