--- a/hello.ipynb
+++ b/hello.ipynb
@@ -28,6 +28,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "eight-basics",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-6584937e3481>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-6584937e3481>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    print(temp--)\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp=10\n",
+    "print(temp--)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "italian-semiconductor",
    "metadata": {},
@@ -719,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "extra-vaccine",
    "metadata": {},
    "outputs": [
@@ -742,13 +762,14 @@
     "    except:\n",
     "        print(\"Some error occured\")\n",
     "    print(\"Returning back from function.\")\n",
+    "    \n",
     "list_of_values=[100,200,300,\"400\",500]\n",
     "calculate_expenditure(list_of_values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "otherwise-meditation",
    "metadata": {},
    "outputs": [
@@ -775,6 +796,7 @@
     "        print(\"Wrong data type\")\n",
     "    except:\n",
     "        print(\"Some error occured\")\n",
+    "\n",
     "list_of_values=[100,200,300,\"400\",500]\n",
     "num_values=0\n",
     "calculate_expenditure(list_of_values)"
@@ -782,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "cellular-skiing",
    "metadata": {},
    "outputs": [
@@ -797,7 +819,9 @@
    ],
    "source": [
     "# Exception handling inside a function\n",
-    "# If an exception occurs inside a function and if the exception is not caught inside it, then the exception is transferred to the function call. We have another opportunity to catch it, if we write function call inside another try and except block.\n",
+    "# If an exception occurs inside a function and if the exception is not caught inside it,\n",
+    "# then the exception is transferred to the function call.\n",
+    "# We have another opportunity to catch it, if we write function call inside another try and except block.\n",
     "\n",
     "def calculate_sum(list_of_expenditure):\n",
     "    total=0\n",
@@ -823,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "working-institution",
    "metadata": {},
    "outputs": [
@@ -838,8 +862,9 @@
    ],
    "source": [
     "# finally\n",
-    "# Sometimes in programming we need to execute some code irrespective of whether the primary program logic itself succeeds or fails to do its job. In Python we can achieve this using a finally block. A finally block of statement is an optional part of the try-except statements. A code written inside the finally block will ALWAYS be executed.\n",
-    "\n",
+    "# to execute some code irrespective of whether the primary program logic itself succeeds or fails to do its job.\n",
+    "# A finally block of statement is an optional part of the try-except statements.\n",
+    "# code written inside the finally block will ALWAYS be executed.\n",
     "# finally block is majorly used to close the database connections in the programs which involves database connectivity.\n",
     "\n",
     "balance=1000\n",
@@ -932,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "supposed-apollo",
    "metadata": {},
    "outputs": [
@@ -941,10 +966,8 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "thisisfirstline\n",
-      "\n",
-      "17\n",
-      "you are reading the second line\n",
+      "written some thing\n",
+      "18\n",
       "\n"
      ]
     }
@@ -956,7 +979,6 @@
     "data =fhr.readline()\n",
     "print(data)\n",
     "\n",
-    "\n",
     "cur_pos=fhr.tell()\n",
     "print(cur_pos)\n",
     "data =fhr.readline()\n",
@@ -966,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "rocky-pontiac",
    "metadata": {},
    "outputs": [
